feat: users followers handlers
